--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "assutech-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://assutech-clone-react.netlify.app/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
@@ -13,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "emailjs": "^3.8.0",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
